2009-02-07 23:29  pramsey

	* source/headers/geos/precision/Makefile.am: Include
	  GeometrySnapper.h in distribution package.

2009-02-02 22:58  sgillies

	* swig/python/README.txt: Note lack of Python support since 3.0

2009-02-02 22:53  sgillies

	* README: Notes on state of scripting language bindings

2009-01-30 20:01  pramsey

	* configure.in: Add new msvc targets to build

2009-01-29 19:22  mloskot

	* build/Makefile.am, build/msvc90, build/msvc90/Makefile.am,
	  build/msvc90/README, build/msvc90/geos.sln,
	  build/msvc90/geos.vsprops, build/msvc90/geos_c_dll,
	  build/msvc90/geos_c_dll/Makefile.am,
	  build/msvc90/geos_c_dll/geos_c_dll.vcproj, build/msvc90/geos_lib,
	  build/msvc90/geos_lib/Makefile.am,
	  build/msvc90/geos_lib/geos_lib.vcproj, build/msvc90/geos_python,
	  build/msvc90/geos_python/Makefile.am,
	  build/msvc90/geos_python/geos_python.vcproj,
	  build/msvc90/geos_ruby, build/msvc90/geos_ruby/Makefile.am,
	  build/msvc90/geos_ruby/geos_ruby.vcproj, build/msvc90/geos_unit,
	  build/msvc90/geos_unit/Makefile.am,
	  build/msvc90/geos_unit/geos_unit.vcproj: Added build/msvc90 with
	  solution and project files for Microsoft Visual C++ 2009 (9.0).
	  Successfully built and tested GEOS with Visual C++ 9.0.

2009-01-29 19:02  pramsey

	* README: update autogen.bat ref

2009-01-29 18:56  mloskot

	* source/headers/geos/algorithm/RayCrossingCounter.h,
	  source/headers/geos/algorithm/locate/IndexedPointInAreaLocator.h,
	  source/headers/geos/algorithm/locate/PointOnGeometryLocator.h,
	  source/headers/geos/geom/util/ComponentCoordinateExtracter.h,
	  source/headers/geos/index/intervalrtree/IntervalRTreeBranchNode.h,
	  source/headers/geos/index/intervalrtree/IntervalRTreeLeafNode.h,
	  source/headers/geos/index/intervalrtree/IntervalRTreeNode.h,
	  source/headers/geos/index/intervalrtree/SortedPackedIntervalRTree.h,
	  source/headers/geos/noding/FastSegmentSetIntersectionFinder.h,
	  source/headers/geos/noding/NodableSegmentString.h,